--- a/src/components/style-components/cards/Card.css
+++ b/src/components/style-components/cards/Card.css
@@ -1,64 +1,76 @@
 .card {
-    background: #fff;
-    border-radius: 16px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: 300px;
-    font-family: Arial, sans-serif;
-  }
-  
-  .card-image {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-  }
-  
-  .card-content {
-    padding: 16px;
-  }
-  
-  .card-title {
-    font-size: 1.2rem;
-    margin: 0;
-    color: #333;
-  }
-  
-  .card-location {
-    font-size: 0.9rem;
-    color: #888;
-    display: flex;
-    align-items: center;
-    margin: 8px 0;
-  }
-  
-  .card-location .bx {
-    margin-right: 8px;
-    color: #888;
-  }
-  
-  .card-price {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #333;
-    margin: 8px 0;
-  }
-  
-  .card-rating {
-    font-size: 0.9rem;
-    color: #888;
-    display: flex;
-    align-items: center;
-    margin: 8px 0;
-  }
-  
-  .card-days {
-    font-size: 0.9rem;
-    color: #888;
-    display: flex;
-    align-items: center;
-  }
-  
-  .card-days .bx {
-    margin-right: 8px;
-    color: #888;
-  }
+  background: #fff;
+  border-radius: 32px;
+  box-shadow: 0px 4px 6px hsla(0, 0%, 0%, 0.1);
+  overflow: hidden;
+  width: 300px;
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+
+.card-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 16px;
+}
+
+.card-content {
+  padding: 16px;
+}
+
+.card-title {
+  font-size: 1.2rem;
+  margin: 0;
+  color: #333;
+}
+
+.card-location {
+  font-size: 0.9rem;
+  color: #888;
+  display: flex;
+  align-items: center;
+  margin: 8px 0;
+}
+
+.card-location .bx {
+  margin-right: 8px;
+  color: #888;
+}
+
+.card-price {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #333;
+  margin: 8px 0;
+}
+
+.card-rating {
+  font-size: 0.9rem;
+  color: #888;
+  display: flex;
+  align-items: center;
+  margin: 8px 0;
+}
+
+.card-days {
+  font-size: 0.9rem;
+  color: #888;
+  display: flex;
+  align-items: center;
+}
+
+.card-days .bx {
+  margin-right: 8px;
+  color: #888;
+}
+
+.starIcon {
+  width: 15px;
+}
